# simple-compiler

./: README.md
src/: CMakeLists.txt  main.cpp
src/lex/: CMakeLists.txt  lex.hpp  lexical_analysis.cpp
src/syn/: CMakeLists.txt  symbols.h  syn.hpp  syntax_analysis.cpp
